--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,10 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "i18n-msg": "pkaske/i18n-msg#^1.0.0",
     "fa-awesome": "^1.1.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.1"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
   }
 }
